--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
             font-size: 18px;
             border-radius: 5px;
         }
+        .testimonials {
+            background: #f8f9fa;
+            padding: 30px;
+            text-align: center;
+        }
+        .testimonials p {
+            font-style: italic;
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
@@ -116,10 +126,16 @@
             </div>
         </div>
         
+        <div class="testimonials">
+            <h2>Cosa dicono i nostri clienti</h2>
+            <p>⭐ "Finalmente un catalogo che posso aggiornare senza ristampare! I clienti trovano tutto in un attimo." – Marco R.</p>
+            <p>⭐ "Ora i miei clienti possono sfogliare gli annunci direttamente dal loro telefono. Un modo rapido ed efficace." – Elena T.</p>
+        </div>
+
         <div class="cta">
             <h2>Contattaci ora</h2>
-            <p>WhatsApp: <strong>[Numero]</strong> | Email: <strong>[Email]</strong></p>
-            <a href="[Link WhatsApp]">Scrivici su WhatsApp</a>
+            <p>WhatsApp: <a href="https://wa.me/39NUMERO">Scrivici su WhatsApp</a></p>
+            <p>Email: <a href="mailto:tuamail@example.com">Inviaci un'email</a></p>
         </div>
     </div>
 </body>
