--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             font-size: 24px;
         }
         .hero {
-            background: #007bff;
+            background: url('catalogo-example.jpg') no-repeat center center/cover;
             color: #fff;
             padding: 50px 20px;
             text-align: center;
@@ -33,9 +33,11 @@
         .hero h1 {
             margin: 0;
             font-size: 36px;
+            text-shadow: 2px 2px 10px rgba(0,0,0,0.5);
         }
         .hero p {
             font-size: 18px;
+            text-shadow: 2px 2px 10px rgba(0,0,0,0.5);
         }
         .content {
             padding: 40px 20px;
@@ -59,8 +61,14 @@
             padding: 20px;
             margin: 10px;
             width: 30%;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
             text-align: center;
+            border-radius: 10px;
+            transform: scale(1);
+            transition: transform 0.3s;
+        }
+        .package:hover {
+            transform: scale(1.05);
         }
         .package h3 {
             color: #333;
@@ -134,8 +142,9 @@
 
         <div class="cta">
             <h2>Contattaci ora</h2>
-            <p>WhatsApp: <a href="https://wa.me/39NUMERO">Scrivici su WhatsApp</a></p>
-            <p>Email: <a href="mailto:tuamail@example.com">Inviaci un'email</a></p>
+            <p>WhatsApp: <a href="https://wa.me/393717771328">+39 371 7771328</a></p>
+            <p>Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=mysenza1@gmail.com">mysenza1@gmail.com</a></p>
+            <a href="https://anto161062.github.io/catalogo/">Scarica un esempio</a>
         </div>
     </div>
 </body>
